K8S/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
spec:
  type: NodePort
  ports:
    - port: 7070
      targetPort: 7070
      nodePort: 30001
  selector:
    app: spring-boot-app
